--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -28,6 +28,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('list_classes') }}">الصفوف والشعب</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('subjects_page') }}">المواد</a>
+                </li>
                 {% endif %}
 
                 <li class="nav-item">
