tracking add thead

--- a/templates/tracking.html
+++ b/templates/tracking.html
@@ -1,6 +1,15 @@
 {% include 'partials/header.html' %}
 {% include 'partials/navbar.html' %}
 
+<style>
+#trackingTable thead th {
+    position: sticky;
+    top: 0;
+    background: #f8f9fa; /* لون خلفية زي bootstrap */
+    z-index: 10;
+}
+</style>
+
 <div class="container my-3">
 
     <div class="d-flex justify-content-between mb-2">
